feat: create order module and start to implement the CRUD

--- a/nest-api/tsconfig.json
+++ b/nest-api/tsconfig.json
@@ -16,6 +16,9 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "paths": {
+      "src/*": ["src/*"]  // Allows imports from 'src' to be resolved correctly
+    }
   }
 }
